@@ -22,6 +22,11 @@ Server Fixes
 --You get +MORE FOOD+ above your head when an action fails due to hungry work.
   Fixes #568
 
+--Nomads (with no well and no homeland) no longer lose their reproduction
+  capabilities permanently when they enter other homelands.  They still need to
+  leave the other homeland to have babies (but get +FREE REIN+ status when they
+  leave).
+
 
 
 Version 316    2020-March-12
